[gd_scene load_steps=82 format=3 uid="uid://j5u002hjx1at"]

[ext_resource type="Shader" uid="uid://dxd5s0apqjwfe" path="res://Player/player.gdshader" id="1_4ntmi"]
[ext_resource type="Script" uid="uid://c08nnt3u1sb67" path="res://Scripts/player.gd" id="1_apopc"]
[ext_resource type="Texture2D" uid="uid://c5gyeakw6ca35" path="res://ImportedAssets/Fantasy Warrior/Idle.png" id="1_l8h54"]
[ext_resource type="Texture2D" uid="uid://cvhhdf6nw574m" path="res://ImportedAssets/Fantasy Warrior/Attack1.png" id="2_x3vf3"]
[ext_resource type="Texture2D" uid="uid://bakad10in0mwr" path="res://ImportedAssets/Fantasy Warrior/Attack2.png" id="3_apopc"]
[ext_resource type="Texture2D" uid="uid://bh0srxfo4r8h4" path="res://ImportedAssets/Fantasy Warrior/Attack3.png" id="4_5htga"]
[ext_resource type="Texture2D" uid="uid://b0iys2o1v7w1p" path="res://ImportedAssets/Fantasy Warrior/Death.png" id="5_p5o4e"]
[ext_resource type="Texture2D" uid="uid://0kgqvoo1ju0w" path="res://ImportedAssets/Fantasy Warrior/Fall.png" id="6_gu6f8"]
[ext_resource type="Texture2D" uid="uid://bn03ai30k28ni" path="res://ImportedAssets/Fantasy Warrior/Take hit.png" id="7_dkpta"]
[ext_resource type="Texture2D" uid="uid://btjudwsjaavjh" path="res://ImportedAssets/Fantasy Warrior/Jump.png" id="9_lfmf2"]
[ext_resource type="Texture2D" uid="uid://d2cwhnhg184dy" path="res://ImportedAssets/Fantasy Warrior/Run.png" id="10_pisgm"]
[ext_resource type="Script" uid="uid://dh360bkv76wje" path="res://Player/camera_2d.gd" id="12_5htga"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4ntmi"]
shader = ExtResource("1_4ntmi")
shader_parameter/target_color = Color(0.619608, 0.560784, 0.447059, 1)
shader_parameter/replace_color = Color(0.193548, 0.129592, 0.0583333, 1)
shader_parameter/tolerance = 0.135

[sub_resource type="AtlasTexture" id="AtlasTexture_yxu6j"]
atlas = ExtResource("10_pisgm")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdkl3"]
atlas = ExtResource("10_pisgm")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ynux"]
atlas = ExtResource("5_p5o4e")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_d30e8"]
atlas = ExtResource("5_p5o4e")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pogt"]
atlas = ExtResource("5_p5o4e")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie76m"]
atlas = ExtResource("5_p5o4e")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy65m"]
atlas = ExtResource("5_p5o4e")
region = Rect2(648, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_maysp"]
atlas = ExtResource("5_p5o4e")
region = Rect2(810, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_1l10g"]
atlas = ExtResource("5_p5o4e")
region = Rect2(972, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rl0i"]
atlas = ExtResource("6_gu6f8")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x5p2"]
atlas = ExtResource("6_gu6f8")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eb1q"]
atlas = ExtResource("6_gu6f8")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvbyc"]
atlas = ExtResource("7_dkpta")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvnt1"]
atlas = ExtResource("7_dkpta")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kmt7"]
atlas = ExtResource("7_dkpta")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ntmi"]
atlas = ExtResource("1_l8h54")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_btcbx"]
atlas = ExtResource("1_l8h54")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwnis"]
atlas = ExtResource("1_l8h54")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_k53q1"]
atlas = ExtResource("1_l8h54")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhl08"]
atlas = ExtResource("1_l8h54")
region = Rect2(648, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtle1"]
atlas = ExtResource("1_l8h54")
region = Rect2(810, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_od3ui"]
atlas = ExtResource("1_l8h54")
region = Rect2(972, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_00tjw"]
atlas = ExtResource("1_l8h54")
region = Rect2(1134, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3vf3"]
atlas = ExtResource("1_l8h54")
region = Rect2(1296, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_apopc"]
atlas = ExtResource("1_l8h54")
region = Rect2(1458, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4i3b"]
atlas = ExtResource("9_lfmf2")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvbbp"]
atlas = ExtResource("9_lfmf2")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v2uk"]
atlas = ExtResource("9_lfmf2")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6nl3"]
atlas = ExtResource("10_pisgm")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hx1r"]
atlas = ExtResource("10_pisgm")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_qas3k"]
atlas = ExtResource("10_pisgm")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntwt4"]
atlas = ExtResource("10_pisgm")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdg72"]
atlas = ExtResource("10_pisgm")
region = Rect2(648, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpoj2"]
atlas = ExtResource("10_pisgm")
region = Rect2(810, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_3e3ym"]
atlas = ExtResource("10_pisgm")
region = Rect2(972, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxi5p"]
atlas = ExtResource("10_pisgm")
region = Rect2(1134, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4o1l"]
atlas = ExtResource("4_5htga")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2n6q"]
atlas = ExtResource("4_5htga")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6x0f"]
atlas = ExtResource("4_5htga")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp1hh"]
atlas = ExtResource("4_5htga")
region = Rect2(648, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs4pp"]
atlas = ExtResource("4_5htga")
region = Rect2(810, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyprq"]
atlas = ExtResource("4_5htga")
region = Rect2(972, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4lon"]
atlas = ExtResource("4_5htga")
region = Rect2(1134, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_qemgg"]
atlas = ExtResource("3_apopc")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_8viyr"]
atlas = ExtResource("3_apopc")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm0op"]
atlas = ExtResource("3_apopc")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_76lrf"]
atlas = ExtResource("3_apopc")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_efx54"]
atlas = ExtResource("3_apopc")
region = Rect2(648, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_755ss"]
atlas = ExtResource("3_apopc")
region = Rect2(810, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbimk"]
atlas = ExtResource("3_apopc")
region = Rect2(972, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_5htga"]
atlas = ExtResource("4_5htga")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5o4e"]
atlas = ExtResource("4_5htga")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu6f8"]
atlas = ExtResource("4_5htga")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkpta"]
atlas = ExtResource("4_5htga")
region = Rect2(648, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfmf2"]
atlas = ExtResource("4_5htga")
region = Rect2(810, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_pisgm"]
atlas = ExtResource("4_5htga")
region = Rect2(972, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0h3t"]
atlas = ExtResource("4_5htga")
region = Rect2(1134, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1ygp"]
atlas = ExtResource("2_x3vf3")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_o28un"]
atlas = ExtResource("2_x3vf3")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_n471f"]
atlas = ExtResource("2_x3vf3")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_7emwf"]
atlas = ExtResource("2_x3vf3")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_hshwv"]
atlas = ExtResource("2_x3vf3")
region = Rect2(648, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpjlu"]
atlas = ExtResource("2_x3vf3")
region = Rect2(810, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mwp6"]
atlas = ExtResource("2_x3vf3")
region = Rect2(972, 0, 162, 162)

[sub_resource type="SpriteFrames" id="SpriteFrames_5htga"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxu6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdkl3")
}],
"loop": false,
"name": &"Dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ynux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d30e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pogt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie76m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy65m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_maysp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1l10g")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rl0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x5p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eb1q")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvbyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvnt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kmt7")
}],
"loop": false,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ntmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btcbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwnis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k53q1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhl08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtle1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od3ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00tjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3vf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apopc")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4i3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvbbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v2uk")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6nl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hx1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qas3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntwt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdg72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpoj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e3ym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxi5p")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4o1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2n6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6x0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp1hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs4pp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyprq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4lon")
}],
"loop": false,
"name": &"air_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qemgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8viyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm0op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76lrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efx54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_755ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbimk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5htga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5o4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu6f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkpta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfmf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pisgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0h3t")
}],
"loop": false,
"name": &"double_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ygp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o28un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n471f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7emwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hshwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpjlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mwp6")
}],
"loop": false,
"name": &"single_attack",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x3vf3"]
height = 46.0

[sub_resource type="CircleShape2D" id="CircleShape2D_apopc"]
radius = 24.0832

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_apopc"]
radius = 8.0
height = 36.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_apopc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_4ntmi")
sprite_frames = SubResource("SpriteFrames_5htga")
animation = &"single_attack"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_x3vf3")

[node name="Camera2D" type="Camera2D" parent="." groups=["Player"]]
position = Vector2(4, -79)
enabled = false
zoom = Vector2(2.5, 2.5)
limit_left = 0
script = ExtResource("12_5htga")

[node name="DealDamageZone" type="Area2D" parent="." groups=["PlayerDamage"]]
position = Vector2(25, 1)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DealDamageZone"]
position = Vector2(8, -16)
shape = SubResource("CircleShape2D_apopc")
disabled = true

[node name="PlayerHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_apopc")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
